--- a/produit.html
+++ b/produit.html
@@ -53,7 +53,7 @@
                             <select id="option" class="form-select mb-3" aria-label="choisir la version">
                             </select>
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"id="btnAddBasket"><a class="btn btn-outline-dark mt-auto" href="panier.html?_id=${produit._id}">Acheter ce produit</a></div>
+                                <div class="text-center"id="btnAddBasket"><a class="btn btn-outline-dark mt-auto" href="panier.html">Acheter ce produit</a></div>
                             </div>
                         </div>
                             
