--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/scripts.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/server.js"></script>
-        <script src="js/teddy.js"></script>
-        <script src="models/Teddy.js"></script>
-        <script src="controllers/teddy.js"></script>
         <script src="js/fonction.js"></script>
         <script src="js/index.js"></script>
     </head>
@@ -32,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="panier.html"><i class="bi-cart-fill me-1"></i>Panier</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="panier.html" id="basketPreview"><i class="bi-cart-fill me-1"></i>Panier</a></li>
                         </li>
                     </ul>
                 </div>
