--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="panier.html" id="basketPreview"><i class="bi-cart-fill me-1"></i>Panier</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="panier.html"><i class="bi-cart-fill me-1"></i>Panier</a><span id="product-count"></span></li>
                         </li>
                     </ul>
                 </div>
