--- a/panier.html
+++ b/panier.html
@@ -13,12 +13,10 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <script src="js/scripts.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/server.js"></script>
-        <script src="js/teddy.js"></script>
-        <script src="models/Teddy.js"></script>
-        <script src="controllers/teddy.js"></script>
         <script src="js/panier.js"></script>
+        <script src="js/fonction.js"></script>
+        <script src="js/index.js"></script>
+        <script src="js/produit.js"></script>
     </head>
 <body>
  <!-- Navigation-->
@@ -62,6 +60,45 @@
         </div>
     </div>
 </div>
+<!--Panier-->
+<section id="section" class="container my-5 align-middle ">
+    <div class=" d-none" id="basket">
+        <p class="text-center fs-4 text-light bg-secondary basket d-none">Contenu du panier</p>
+        <div class="table-responsive">
+            <table class="table table-hover my-auto mx-0">
+                <thead>
+                <tr class="text-center fs-5">
+                    <th scole="col">Produit</th>
+                    <th scole="col">Nom</th>
+                    <th scole="col">Option</th>
+                    <th scole="col">Quantité</th>
+                    <th scole="col">Prix</th>
+                    <th scole="col" class="bg-light">Sous-total</th>
+                </tr>
+                </thead>
+                <tbody id="productsBasket">
+                <!--Insertion panier.js-->
+                </tbody>
+                <tfoot>
+                <tr class="text-center fs-5 bg-light">
+                    <th colspan="4" class="bg-white"></th>
+                    <th colspan="1">Total : </th>
+                    <th colspan="1" id="totalPrice"></th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div class="text-center my-5 row" id="cacheButton">
+            <div class="col-12 col-sm-6 my-4">
+                <button type="submit" class="btn btn-secondary mx-5" id="validationBasket">Valider le panier</button>
+            </div>
+            <div class="col-12 col-sm-6 my-4">
+                <button type="button" class="btn btn-danger mx-5" data-bs-toggle="modal" data-bs-target="#modalClearBasket">Vider le panier</button>
+            </div>
+
+        </div>
+    </div>
+</section>
 <footer class="py-5 bg-dark">
     <ul class="list-inline text-center position">
         <li class="list-inline-item"><a href="index.html" title="Accueil">Accueil</a></li>
