--- a/produit.html
+++ b/produit.html
@@ -52,9 +52,31 @@
                         <div class="d-flex">
                             <select id="option" class="form-select mb-3" aria-label="choisir la version">
                             </select>
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"id="btnAddBasket"><a class="btn btn-outline-dark mt-auto" href="panier.html">Acheter ce produit</a></div>
+                            <div class="row">
+                                <div class="col-5 col-sm-3 col-md-5 col-lg-4 col-xl-3 my-auto">
+                                    <p>Quantité :</p>
+                                </div>
+                                <div class="col-4 col-sm-3 col-md-4 col-lg-3 ">
+                                    <select id="quantity" class="form-select mb-3" aria-label="Quantité">
+                                        <option selected value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
                             </div>
+                            <button id="btnAddBasket" class="btn btn-secondary" data-bs-toggle="modal"
+                            data-bs-target="#myModal">Ajouter au panier</button>
+                </div>
+                <div class="toast show position-absolute top-50 start-50 translate-middle bg-danger" id="myToast"
+                     hidden>
+                    <div id="liveToast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="d-flex my-2">
+                            <div class="toast-body me-auto py-0 text-white" id="message">
+                            </div>
+                            <button type="button" class="btn-close btn-close-white me-2" data-bs-dismiss="toast"
+                                    aria-label="Close" id="closeToast"></button>
                         </div>
                             
                         </div>
