--- a/produit.html
+++ b/produit.html
@@ -78,12 +78,32 @@
                             <button type="button" class="btn-close btn-close-white me-2" data-bs-dismiss="toast"
                                     aria-label="Close" id="closeToast"></button>
                         </div>
-                            
-                        </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Produit ajouté</h5>
+            </div>
+            <div class="modal-body">
+                <p>Votre produit a bien été ajouté au panier</p>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-secondary" type="button" href="panier.html">Voir mon panier</a>
+                <a class="btn btn-success" type="button" href="index.html">Continuer mes achats</a>
+
+            </div>
+        </div>
+    </div>
+</div>
+
         
         <!-- Footer-->
         <footer class="py-5 bg-dark">
