--- a/produit.html
+++ b/produit.html
@@ -10,10 +10,9 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        
-        <script src="js/index.js"></script>
         <script src="js/fonction.js"></script>
         <script src="js/produit.js"></script>
+        <script src="js/scripts.js"></script>
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
@@ -41,7 +40,7 @@
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center"id="product">
                     <div class="col-md-6" id="productImage"></div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 detail">
                         <!--Nom du produit-->
                         <h1 class="display-5 fw-bolder" id="productName"></h1>
                         <div class="fs-5 mb-5">
