Modif des erreurs en console

--- a/panier.html
+++ b/panier.html
@@ -13,10 +13,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <script src="js/scripts.js"></script>
-        <script src="js/panier.js"></script>
-        <script src="js/fonction.js"></script>
-        
-        
+        <script src="js/panier.js"></script>        
     </head>
 <body>
  <!-- Navigation-->
@@ -62,7 +59,7 @@
 </div>
 <!--Panier-->
 <section id="section" class="container my-5 align-middle ">
-    <div class=" d-none" id="basket">
+    <div class=" d-none none" id="basket">
         <p class="text-center fs-4 text-light bg-secondary basket d-none">Contenu du panier</p>
         <div class="table-responsive">
             <table class="table table-hover my-auto mx-0">
