--- a/produit.html
+++ b/produit.html
@@ -74,7 +74,7 @@
                         <div class="d-flex my-2">
                             <div class="toast-body me-auto py-0 text-white" id="message">
                             </div>
-                            <button type="button" class="btn-close btn-close-white me-2" data-bs-dismiss="toast"
+                            <button type="button" class="btn-close btn-close-white me-2 plus" data-bs-dismiss="toast"
                                     aria-label="Close" id="closeToast"></button>
                         </div>
                     </div>
