--- a/produit.html
+++ b/produit.html
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="col-4 col-sm-3 col-md-4 col-lg-3 ">
                                     <select id="quantity" class="form-select mb-3" aria-label="Quantité">
-                                        <option selected value="1">1</option>
+                                        <option value="1">1</option>
                                         <option value="2">2</option>
                                         <option value="3">3</option>
                                         <option value="4">4</option>
