--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+        </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+    <script src="https://kit.fontawesome.com/fd986726cd.js" crossorigin="anonymous"></script>
+    <link href="../frontend/css/styles.css" rel="stylesheet" />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="../frontend/assets/favicon.ico" />
 
@@ -54,9 +56,11 @@
                         <h5>Panier</h5>
                     </div>
                     <div class="card-body cart">
-                        <div class="col-sm-12 empty-cart-cls text-center"> <img src="../frontend/images/panier.png" width="130" height="130" class="img-fluid mb-4 mr-3">
+                        <div class="col-sm-12 empty-cart-cls text-center"> <img src="../frontend/images/panier.png"
+                                width="130" height="130" class="img-fluid mb-4 mr-3">
                             <h3><strong>Votre panier est vide</strong></h3>
-                            <a href="../frontend/index.html" class="btn btn-primary cart-btn-transform m-3" data-abc="true">Ajout d'achat</a>
+                            <a href="../frontend/index.html" class="btn btn-primary cart-btn-transform m-3"
+                                data-abc="true">Ajout d'achat</a>
                         </div>
                     </div>
                 </div>
@@ -188,16 +192,8 @@
             <li class="list-inline-item"><a href="#" title="Mentions Légales">Mentions Légales</a></li>
         </ul>
     </footer>
-
-    <script src="https://kit.fontawesome.com/fd986726cd.js" crossorigin="anonymous"></script>
-    <link href="../frontend/css/styles.css" rel="stylesheet" />
     <script src="../frontend/js/fonction.js"></script>
     <script src="../frontend/js/panier.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-        </script>
-
-
 </body>
 
 </html>
