--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -56,7 +56,7 @@
                         <h5>Panier</h5>
                     </div>
                     <div class="card-body cart">
-                        <div class="col-sm-12 empty-cart-cls text-center"> <img src="../frontend/images/panier.png"
+                        <div class="col-sm-12 empty-cart-cls text-center"> <img src="../frontend/images/panier.png" alt="panier"
                                 width="130" height="130" class="img-fluid mb-4 mr-3">
                             <h3><strong>Votre panier est vide</strong></h3>
                             <a href="../frontend/index.html" class="btn btn-primary cart-btn-transform m-3"
@@ -71,17 +71,17 @@
     <!-- Table -->
     <section id="section" class="container my-5 align-middle ">
         <div class=" d-none" id="basket">
-            <p class="text-center fs-4 text-light bg-secondary basket d-none">Contenu du panier</p>
+            <h5 class="text-center fs-4 text-light bg-secondary basket d-none">Contenu du panier</h5>
             <div class="table-responsive">
                 <table class="table table-hover my-auto mx-0">
                     <thead>
                         <tr class="text-center fs-5">
-                            <th scole="col">Produit</th>
-                            <th scole="col">Nom</th>
-                            <th scole="col">Colors</th>
-                            <th scole="col">Quantité</th>
-                            <th scole="col">Prix</th>
-                            <th scole="col" class="bg-light">Sous-total</th>
+                            <th scope="col">Produit</th>
+                            <th scope="col">Nom</th>
+                            <th scope="col">Colors</th>
+                            <th scope="col">Quantité</th>
+                            <th scope="col">Prix</th>
+                            <th scope="col" class="bg-light">Sous-total</th>
                         </tr>
                     </thead>
                     <tbody id="productsBasket">
@@ -148,9 +148,9 @@
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                     <label class="form-check-label" for="invalidCheck2">
-                        <p data-bs-toggle="tooltip" data-bs-placement="top"
+                        <span data-bs-toggle="tooltip" data-bs-placement="top"
                             title="Termes et conditions de vente : Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consequatur quos quis, asperiores nostrum cupiditate consequuntur earum quae saepe distinctio!">
-                            Accepter les termes et conditions de vente</p>
+                            Accepter les termes et conditions de vente</span>
                     </label>
                 </div>
             </div>
@@ -184,7 +184,7 @@
     </div>
 
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bgLinearGradien">
         <ul class="list-inline text-center position">
             <li class="list-inline-item"><a href="../frontend/index.html" title="Accueil">Accueil</a></li>
             <li class="list-inline-item"><a href="mailto:orinoco@mail.com?subject=Contact" title="Contact">Contact</a>
