--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <img src="../frontend/images/Orinoco.jpg" alt="logo" class="navbar-brand logo">
+            <img src="../frontend/images/Orinoco.jpg" alt="logo" class="navbar-brand logo"> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -38,13 +38,13 @@
         </div>
     </nav>
     <!-- Product section-->
-    <section class="py-5">
+    <div class="py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center" id="product">
                 <div class="col-md-6" id="productImage"></div>
                 <div class="col-md-6 detail">
                     <!--Nom du produit-->
-                    <h1 class="display-5 fw-bolder" id="productName"></h1>
+                    <span class="display-5 fw-bolder" id="productName"></span>
                     <div class="fs-5 mb-5">
                         <!--Prix du produit-->
                         <span id="productPrice"></span>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -97,8 +97,8 @@
                     <p>Votre produit a bien été ajouté au panier</p>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-secondary" type="button" href="../frontend/panier.html">Voir mon panier</a>
-                    <a class="btn btn-success" type="button" href="../frontend/index.html">Continuer mes achats</a>
+                    <a class="btn btn-secondary"  href="../frontend/panier.html">Voir mon panier</a>
+                    <a class="btn btn-success" href="../frontend/index.html">Continuer mes achats</a>
 
                 </div>
             </div>
