--- a/frontend/order.html
+++ b/frontend/order.html
@@ -91,7 +91,8 @@
             <li class="list-inline-item"><a href="#" title="Mentions Légales">Mentions Légales</a></li>
         </ul>
     </footer>
-    <script src="../frontend/js/fonction.js"></script>
+    <!--Fichier JS-->
+    <script src="../frontend/js/utilitaire.js"></script>
     <script src="../frontend/js/order.js"></script>
 
 </body>
