--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -114,7 +114,7 @@
         </ul>
     </footer>
     <!--Fichier JS-->
-    <script src="../frontend/js/fonction.js"></script>
+    <script src="../frontend/js/utilitaire.js"></script>
     <script src="../frontend/js/produit.js"></script>
 </body>
 </html>
