--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,8 @@
             <li class="list-inline-item"><a href="#" title="Mentions Légales">Mentions Légales</a></li>
         </ul>
     </footer>
-    <script src="../frontend/js/fonction.js"></script>
+    <!--Fichier JS-->
+    <script src="../frontend/js/utilitaire.js"></script>
     <script src="../frontend/js/index.js"></script>
 </body>
 
