--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -192,7 +192,8 @@
             <li class="list-inline-item"><a href="#" title="Mentions Légales">Mentions Légales</a></li>
         </ul>
     </footer>
-    <script src="../frontend/js/fonction.js"></script>
+    <!--Fichier JS-->
+    <script src="../frontend/js/utilitaire.js"></script>
     <script src="../frontend/js/panier.js"></script>
 </body>
 
