Affichage du message d'erreur

--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -39,7 +39,7 @@
     </nav>
     <!-- Product section-->
     <div class="py-5">
-        <div class="container px-4 px-lg-5 my-5">
+        <div class="container px-4 px-lg-5 my-5" id="productList">
             <div class="row gx-4 gx-lg-5 align-items-center" id="product">
                 <div class="col-md-6" id="productImage"></div>
                 <div class="col-md-6 detail">
